# sabissbackend

./: Cargo.toml
migrations/: 202603310001_create_auth_tables.sql  202603310002_embedded_wallets.sql  202603310003_backend_managed_wallets.sql  202603310004_wallet_connect_usernames.sql  202604011701_create_market_tables.sql  202604011717_add_market_trading_status.sql  202604011745_add_market_resolutions.sql  202604011815_add_market_event_neg_risk_configs.sql  202604011930_allow_published_market_states.sql  202604011931_split_event_market_creation.sql  202604020001_create_admin_upload_assets.sql  202604030001_optimize_market_read_indexes.sql  202604041900_add_market_price_snapshots.sql  202604051230_add_market_trade_stats_and_history.sql  202604051500_account_abstraction_wallet_accounts.sql  202604070001_create_market_orders.sql  202604070002_create_market_order_fills_and_comments.sql  202604070003_add_market_comment_replies_and_likes.sql  202604080001_add_public_market_search_indexes.sql  202604090001_create_user_market_trade_history.sql  202604110001_create_market_auto_resolution_configs.sql  202604110002_create_market_auto_create_series.sql  202604160001_create_admin_auth_tables.sql  202604170001_add_google_identities.sql  202604170003_expand_market_tables.sql  202604170010_comprehensive_markets.sql  202604170020_normalize_market_statuses.sql  202604170021_add_market_read_side_tables.sql  202604170030_stellar_smart_wallet_accounts.sql
src/: app.rs  lib.rs  main.rs
src/config/: db.rs  environment.rs  mod.rs
src/middleware/: admin.rs  user.rs
src/module/: mod.rs
src/module/admin/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/auth/: controller.rs  crud.rs  error.rs  mod.rs  model.rs  route.rs  schema.rs
src/module/comment/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/faucet/: controller.rs  mod.rs  route.rs  schema.rs
src/module/liquidity/: controller.rs  crud.rs  model.rs  route.rs  schema.rs
src/module/market/: controller.rs  crud.rs  mod.rs  model.rs  route.rs  schema.rs  trade_controller.rs  trade_schema.rs
src/module/order/: controller.rs  crud.rs  mod.rs  model.rs  (+2 more)
src/service/: aa.rs  admin_auth.rs  auth.rs  cache.rs  comment.rs  crypto.rs  faucet.rs  jwt.rs  market.rs  market_auto_create.rs  market_auto_resolution.rs  market_price_sync.rs  mod.rs  order.rs  orderbook.rs  public_feed_prewarm.rs  rpc.rs  soroban_rpc.rs  stellar.rs  upload.rs
tests/: auth_tests.rs  liquidity_tests.rs  market_tests.rs
(+40 files in other folders)
